added iphone + slide show

--- a/mobile.html
+++ b/mobile.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>P2662151</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
 </head>
 
 <body>
@@ -22,37 +24,64 @@
       <a href="index.html">Computer</a>
       <a href="mobile.html" class="active">Mobile</a>
       <a href="entertainment.html">Entertainment</a>
-      <a href="about-us.html">About Us</a>
     </nav>
   </header>
 
-  <main>
-    <section class="iphone">
-      <h2>
-        Iphone 15 Pro Max
-      </h2>
+  <main id="mobile">
+
+    <h1> You looking for some good mobiles?</h1>
+    <h1> Here are some options for you!</h1>
+
+    <section id="iphone">
+
       <div class="slideshow-container">
         <div class="mySlides">
-          <img src="images/iphones.jpg" alt="">
+          <img src="images/iphone15-1.jpg" alt="">
         </div>
         <div class="mySlides">
-          <img src="images/iphone2.jpg" alt="">
+          <img src="images/iphone15-2.jpg" alt="">
         </div>
         <div class="mySlides">
-          <img src="images/iphone3.jpg" alt="">
-        </div>
-        <div class="mySlides">
-          <img src="images/iphone4.jpg" alt="">
-        </div>
-        <div class="mySlides">
-          <img src="images/iphone5.jpg" alt="">
+          <img src="images/iphone15-3.jpg" alt="">
         </div>
         <a class="prev">&#10094;</a>
         <a class="next">&#10095;</a>
       </div>
+
+      <h2>
+        Iphone 15 Pro Max
+      </h2>
+
+      <div id="iphone-specifications">
+        <span class="camera"><i class="fa fa-camera"></i> 48.0 mp</span>
+        <span class="screen-size"><i class="fa fa-mobile-alt"></i> 6.7"</span>
+        <span class="battery-life"><i class="fa fa-battery-half"></i> 29 hours</span>
+      </div>
+
+
+      <div id="iphone-content">
+        <p>
+          The most recent flagship smartphone from Apple, the iPhone 15 Pro Max, has state-of-the-art features and
+          specs. Its gorgeous 6.7-inch display, which has a curved edge and a sleek design, makes for an immersive
+          viewing experience and is ideal for gaming and multimedia consumption. The A17 Bionic, the newest and most
+          potent chip from Apple, powers the gadget and offers fluid multitasking and blazingly quick speed.
+        </p>
+
+        <p>
+          The sophisticated camera system of the iPhone 15 Pro Max is one of its most notable features. Its 48-megapixel
+          primary camera produces extraordinarily vivid and detailed pictures. Additionally, the camera has
+          sophisticated computational photography features like enhanced low-light performance and sophisticated video
+          recording modes. Furthermore, the gadget has an amazing battery life of up to 29 hours, so you can be
+          productive and connected all day long without having to worry about running out of power.
+        </p>
+      </div>
+
     </section>
+
+
   </main>
   <script src="js/scripts.js"></script>
+  <script src="js/mobile.js"></script>
 </body>
 
 
