iphone slideshow added

--- a/mobile.html
+++ b/mobile.html
@@ -36,6 +36,26 @@
 
       <div class="slideshow-container">
         <div class="mySlides">
+          <img src="images/iphone-15-black1.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/iphone-15-black2.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/iphone-15-black3.jpg" alt="">
+        </div>
+
+        <div class="mySlides">
+          <img src="images/iphone-15-blue1.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/iphone-15-blue2.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/iphone-15-blue3.jpg" alt="">
+        </div>
+
+        <div class="mySlides">
           <img src="images/iphone15-1.jpg" alt="">
         </div>
         <div class="mySlides">
@@ -44,6 +64,17 @@
         <div class="mySlides">
           <img src="images/iphone15-3.jpg" alt="">
         </div>
+
+        <div class="mySlides">
+          <img src="images/iphone-15-white1.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/iphone-15-white2.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/iphone-15-white3.jpg" alt="">
+        </div>
+
         <a class="prev">&#10094;</a>
         <a class="next">&#10095;</a>
       </div>
@@ -58,6 +89,15 @@
         <span class="battery-life"><i class="fa fa-battery-half"></i> 29 hours</span>
       </div>
 
+      <div class="color-options">
+        <p>Colour: Black Titanium</p>
+        <div class="color-choices">
+          <span id="black-titanium" class="color-circle" onclick="setColor('black')"></span>
+          <span id="blue-titanium" class="color-circle" onclick="setColor('blue')"></span>
+          <span id="natural-titanium" class="color-circle" onclick="setColor('natural')"></span>
+          <span id="white-titanium" class="color-circle" onclick="setColor('white')"></span>
+        </div>
+      </div>
 
       <div id="iphone-content">
         <p>
