samsung displaying done

--- a/mobile.html
+++ b/mobile.html
@@ -90,7 +90,8 @@
       </div>
 
       <div class="color-options">
-        <p>Colour: Black Titanium</p>
+        <p id="color-name">Colour: Black Titanium</p>
+        <p>Price: £1,999</p>
         <div class="color-choices">
           <span id="black-titanium" class="color-circle" onclick="setColor('black')"></span>
           <span id="blue-titanium" class="color-circle" onclick="setColor('blue')"></span>
@@ -113,6 +114,108 @@
           sophisticated computational photography features like enhanced low-light performance and sophisticated video
           recording modes. Furthermore, the gadget has an amazing battery life of up to 29 hours, so you can be
           productive and connected all day long without having to worry about running out of power.
+        </p>
+
+        <p>This Iphone can be bought from the apple original website here
+          <a class="link" href="https://www.apple.com/uk/shop/buy-iphone/iphone-15-pro">Apple website</a>
+        </p>
+      </div>
+
+    </section>
+
+
+
+
+
+    <section id="samsung">
+
+      <div class="slideshow-container">
+        <div class="mySlides">
+          <img src="images/samsung-black1.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/samsung-black2.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/samsung-black3.jpg" alt="">
+        </div>
+
+        <div class="mySlides">
+          <img src="images/samsung-grey1.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/samsung-grey2.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/samsung-grey3.jpg" alt="">
+        </div>
+
+        <div class="mySlides">
+          <img src="images/samsung-violet1.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/samsung-violet2.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/samsung-violet3.jpg" alt="">
+        </div>
+
+        <div class="mySlides">
+          <img src="images/samsung-yellow2.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/samsung-yellow1.jpg" alt="">
+        </div>
+        <div class="mySlides">
+          <img src="images/samsung-yellow3.jpg" alt="">
+        </div>
+
+
+
+
+        <a class="prev">&#10094;</a>
+        <a class="next">&#10095;</a>
+      </div>
+
+      <h2>
+        Smasung Galaxy S24 Ultra
+      </h2>
+
+      <div id="samsung-specifications">
+        <span class="camera"><i class="fa fa-camera"></i> 48.0 mp</span>
+        <span class="screen-size"><i class="fa fa-mobile-alt"></i> 6.7"</span>
+        <span class="battery-life"><i class="fa fa-battery-half"></i> 29 hours</span>
+      </div>
+
+      <div class="color-options-samsung">
+        <p id="color-name-samsung">Colour: Black Titanium</p>
+        <p>Price: £1,999</p>
+        <div class="color-choices-samsung">
+          <span id="titanium-black" class="color-circle" onclick="setColorSamsung('black')"></span>
+          <span id="titanium-grey" class="color-circle" onclick="setColorSamsung('grey')"></span>
+          <span id="titanium-violet" class="color-circle" onclick="setColorSamsung('violet')"></span>
+          <span id="titanium-yellow" class="color-circle" onclick="setColorSamsung('yellow')"></span>
+        </div>
+      </div>
+
+      <div id="samsung-content">
+        <p>
+          The most recent flagship smartphone from Apple, the iPhone 15 Pro Max, has state-of-the-art features and
+          specs. Its gorgeous 6.7-inch display, which has a curved edge and a sleek design, makes for an immersive
+          viewing experience and is ideal for gaming and multimedia consumption. The A17 Bionic, the newest and most
+          potent chip from Apple, powers the gadget and offers fluid multitasking and blazingly quick speed.
+        </p>
+
+        <p>
+          The sophisticated camera system of the iPhone 15 Pro Max is one of its most notable features. Its 48-megapixel
+          primary camera produces extraordinarily vivid and detailed pictures. Additionally, the camera has
+          sophisticated computational photography features like enhanced low-light performance and sophisticated video
+          recording modes. Furthermore, the gadget has an amazing battery life of up to 29 hours, so you can be
+          productive and connected all day long without having to worry about running out of power.
+        </p>
+
+        <p>This Iphone can be bought from the apple original website here
+          <a class="link" href="https://www.apple.com/uk/shop/buy-iphone/iphone-15-pro">Apple website</a>
         </p>
       </div>
 
