mobile page done

--- a/mobile.html
+++ b/mobile.html
@@ -79,28 +79,35 @@
         <a class="next">&#10095;</a>
       </div>
 
-      <h2>
-        Iphone 15 Pro Max
-      </h2>
 
-      <div id="iphone-specifications">
-        <span class="camera"><i class="fa fa-camera"></i> 48.0 mp</span>
-        <span class="screen-size"><i class="fa fa-mobile-alt"></i> 6.7"</span>
-        <span class="battery-life"><i class="fa fa-battery-half"></i> 29 hours</span>
-      </div>
 
-      <div class="color-options">
-        <div class="color-and-price">
-          <p id="color-name" class="color-text">Colour: Black Titanium</p>
-          <p class="price">Price: £1,199</p>
+      <section id="about-iphone">
+        <h2>
+          Iphone 15 Pro Max
+        </h2>
+
+        <div id="iphone-specifications">
+          <span class="camera"><i class="fa fa-camera"></i> 48.0 mp</span>
+          <span class="screen-size"><i class="fa fa-mobile-alt"></i> 6.7"</span>
+          <span class="battery-life"><i class="fa fa-battery-half"></i> 29 hours</span>
         </div>
-        <div class="color-choices">
-          <span id="black-titanium" class="color-circle" onclick="setColor('black')"></span>
-          <span id="blue-titanium" class="color-circle" onclick="setColor('blue')"></span>
-          <span id="natural-titanium" class="color-circle" onclick="setColor('natural')"></span>
-          <span id="white-titanium" class="color-circle" onclick="setColor('white')"></span>
+
+        <div class="color-options">
+          <div class="color-and-price">
+            <p id="color-name" class="color-text">Colour: Black Titanium</p>
+            <p class="price">Price: £1,199</p>
+          </div>
+          <div class="color-choices">
+            <span id="black-titanium" class="color-circle" onclick="setColor('black')"></span>
+            <span id="blue-titanium" class="color-circle" onclick="setColor('blue')"></span>
+            <span id="natural-titanium" class="color-circle" onclick="setColor('natural')"></span>
+            <span id="white-titanium" class="color-circle" onclick="setColor('white')"></span>
+          </div>
         </div>
-      </div>
+      </section>
+
+
+
 
       <div id="iphone-content">
         <p>
@@ -111,7 +118,8 @@
         </p>
 
         <p>
-          The sophisticated camera system of the iPhone 15 Pro Max is one of its most notable features. Its 48-megapixel
+          The sophisticated camera system of the iPhone 15 Pro Max is one of its most notable features. Its
+          48-megapixel
           primary camera produces extraordinarily vivid and detailed pictures. Additionally, the camera has
           sophisticated computational photography features like enhanced low-light performance and sophisticated video
           recording modes. Furthermore, the gadget has an amazing battery life of up to 29 hours, so you can be
@@ -178,31 +186,33 @@
         <a class="prev">&#10094;</a>
         <a class="next">&#10095;</a>
       </div>
-
-      <h2>
-        Smasung Galaxy S24 Ultra
-      </h2>
-
-      <div id="samsung-specifications">
-        <span class="camera"><i class="fa fa-camera"></i> 200.0 mp</span>
-        <span class="screen-size"><i class="fa fa-mobile-alt"></i> 6.8"</span>
-        <span class="battery-life"><i class="fa fa-battery-half"></i> 30 hours</span>
-      </div>
+      <section id="about-samsung">
+        <h2>
+          Smasung Galaxy S24 Ultra
+        </h2>
 
 
-      <div class="color-options-samsung">
-        <div class="color-and-price">
-          <p id="color-name-samsung">Colour: Black Titanium</p>
-          <p class="price">Price: £1,249</p>
+
+        <div id="samsung-specifications">
+          <span class="camera"><i class="fa fa-camera"></i> 200.0 mp</span>
+          <span class="screen-size"><i class="fa fa-mobile-alt"></i> 6.8"</span>
+          <span class="battery-life"><i class="fa fa-battery-half"></i> 30 hours</span>
         </div>
-        <div class="color-choices-samsung">
-          <span id="titanium-black" class="color-circle" onclick="setColorSamsung('black')"></span>
-          <span id="titanium-grey" class="color-circle" onclick="setColorSamsung('grey')"></span>
-          <span id="titanium-violet" class="color-circle" onclick="setColorSamsung('violet')"></span>
-          <span id="titanium-yellow" class="color-circle" onclick="setColorSamsung('yellow')"></span>
-        </div>
-      </div>
 
+
+        <div class="color-options-samsung">
+          <div class="color-and-price">
+            <p id="color-name-samsung">Colour: Black Titanium</p>
+            <p class="price">Price: £1,249</p>
+          </div>
+          <div class="color-choices-samsung">
+            <span id="titanium-black" class="color-circle" onclick="setColorSamsung('black')"></span>
+            <span id="titanium-grey" class="color-circle" onclick="setColorSamsung('grey')"></span>
+            <span id="titanium-violet" class="color-circle" onclick="setColorSamsung('violet')"></span>
+            <span id="titanium-yellow" class="color-circle" onclick="setColorSamsung('yellow')"></span>
+          </div>
+        </div>
+      </section>
       <div id="samsung-content">
         <p>
           The tech giant's most recent flagship smartphone, the Samsung Galaxy S24 Ultra, was introduced in February
