--- a/entertainment.html
+++ b/entertainment.html
@@ -31,7 +31,7 @@
     </div>
     <div class="content">
 
-      <section id="apple-vision-pro">
+      <div id="apple-vision-pro">
         <section class="entertainment-subtitle">
           <h2>Apple vision pro</h2>
           <p>
@@ -40,13 +40,13 @@
         </section>
         <div class="slideshow-container">
           <div class="mySlides">
-            <img id="apple-product" src="images/apple-vision-pro.jpg">
+            <img id="apple-product" src="images/apple-vision-pro.jpg" alt="apple vision gogles">
           </div>
           <div class="mySlides">
-            <img src="images/apple-vision-pro-person.jpeg">
+            <img src="images/apple-vision-pro-person.jpeg" alt="woman using apple vision">
           </div>
           <div class="mySlides">
-            <img src="images/apple-vision-pro-person-reading.jpeg">
+            <img src="images/apple-vision-pro-person-reading.jpeg" alt="woman using apple vision">
           </div>
           <a class="prev">&#10094;</a>
           <a class="next">&#10095;</a>
@@ -80,13 +80,13 @@
           </p>
         </div>
 
-      </section>
+      </div>
 
-      <section id="AI">
+      <div id="AI">
         <section class="entertainment-subtitle">
           <h2>Artificial Intelligence (AI) and Machine Learning</h2>
         </section>
-        <img src="images/AI-and-machine-learning.jpg">
+        <img src="images/AI-and-machine-learning.jpg" alt="artificial intelligence">
 
         <div id="AI-content">
           <p class="subtitle">
@@ -124,9 +124,9 @@
             use of AI and ML, which calls for open procedures, fair data representation, and ongoing supervision.
           </p>
         </div>
-      </section>
+      </div>
 
-      <section id="moonwalkers">
+      <div id="moonwalkers">
         <section class="entertainment-subtitle">
           <h2>Moonwalkers shoes</h2>
           <p>
@@ -136,13 +136,13 @@
         </section>
         <div class="slideshow-container">
           <div class="mySlides">
-            <img src="images/moonwalkers-shoes-gif.gif">
+            <img src="images/moonwalkers-shoes-gif.gif" alt="person using moonwalkers shoes">
           </div>
           <div class="mySlides">
-            <img src="images/moonwalkers-shoes-1.jpg">
+            <img src="images/moonwalkers-shoes-1.jpg" alt="moonwalkers shoes">
           </div>
           <div class="mySlides">
-            <img src="images/moonwalkers-shoes-2.jpg">
+            <img src="images/moonwalkers-shoes-2.jpg" alt="moonwalkers shoes">
           </div>
           <a class="prev">&#10094;</a>
           <a class="next">&#10095;</a>
@@ -177,11 +177,10 @@
           </p>
         </div>
 
-      </section>
+      </div>
 
     </div>
 
-    </div>
 
   </main>
   <script src="js/scripts.js"></script>
