--- a/mobile.html
+++ b/mobile.html
@@ -32,47 +32,47 @@
     <h1> You looking for some good smartphones?</h1>
     <h1> Here are some options for you!</h1>
 
-    <section id="iphone">
+    <div id="iphone">
 
       <div class="slideshow-container">
         <div class="mySlides">
-          <img src="images/iphone-15-black1.jpg" alt="">
+          <img src="images/iphone-15-black1.jpg" alt="iphone 15 black">
         </div>
         <div class="mySlides">
-          <img src="images/iphone-15-black2.jpg" alt="">
+          <img src="images/iphone-15-black2.jpg" alt="iphone 15 black">
         </div>
         <div class="mySlides">
-          <img src="images/iphone-15-black3.jpg" alt="">
-        </div>
-
-        <div class="mySlides">
-          <img src="images/iphone-15-blue1.jpg" alt="">
-        </div>
-        <div class="mySlides">
-          <img src="images/iphone-15-blue2.jpg" alt="">
-        </div>
-        <div class="mySlides">
-          <img src="images/iphone-15-blue3.jpg" alt="">
+          <img src="images/iphone-15-black3.jpg" alt="iphone 15 black">
         </div>
 
         <div class="mySlides">
-          <img src="images/iphone15-1.jpg" alt="">
+          <img src="images/iphone-15-blue1.jpg" alt="iphone 15 blue">
         </div>
         <div class="mySlides">
-          <img src="images/iphone15-2.jpg" alt="">
+          <img src="images/iphone-15-blue2.jpg" alt="iphone 15 blue">
         </div>
         <div class="mySlides">
-          <img src="images/iphone15-3.jpg" alt="">
+          <img src="images/iphone-15-blue3.jpg" alt="iphone 15 blue">
         </div>
 
         <div class="mySlides">
-          <img src="images/iphone-15-white1.jpg" alt="">
+          <img src="images/iphone15-1.jpg" alt="iphone 15 natural titanium">
         </div>
         <div class="mySlides">
-          <img src="images/iphone-15-white2.jpg" alt="">
+          <img src="images/iphone15-2.jpg" alt="iphone 15 natural titanium">
         </div>
         <div class="mySlides">
-          <img src="images/iphone-15-white3.jpg" alt="">
+          <img src="images/iphone15-3.jpg" alt="iphone 15 natural titanium">
+        </div>
+
+        <div class="mySlides">
+          <img src="images/iphone-15-white1.jpg" alt="iphone 15 white">
+        </div>
+        <div class="mySlides">
+          <img src="images/iphone-15-white2.jpg" alt="iphone 15 white">
+        </div>
+        <div class="mySlides">
+          <img src="images/iphone-15-white3.jpg" alt="iphone 15 white">
         </div>
 
         <a class="prev">&#10094;</a>
@@ -81,7 +81,7 @@
 
 
 
-      <section id="about-iphone">
+      <div id="about-iphone">
         <h2>
           Iphone 15 Pro Max
         </h2>
@@ -104,7 +104,7 @@
             <span id="white-titanium" class="color-circle" onclick="setColor('white')"></span>
           </div>
         </div>
-      </section>
+      </div>
 
 
 
@@ -131,53 +131,53 @@
         </p>
       </div>
 
-    </section>
+    </div>
 
 
 
 
 
-    <section id="samsung">
+    <div id="samsung">
 
       <div class="slideshow-container">
         <div class="mySlides">
-          <img src="images/samsung-black1.jpg" alt="">
+          <img src="images/samsung-black1.jpg" alt="Samsung S24 Ultra black">
         </div>
         <div class="mySlides">
-          <img src="images/samsung-black2.jpg" alt="">
+          <img src="images/samsung-black2.jpg" alt="Samsung S24 Ultra black">
         </div>
         <div class="mySlides">
-          <img src="images/samsung-black3.jpg" alt="">
-        </div>
-
-        <div class="mySlides">
-          <img src="images/samsung-grey1.jpg" alt="">
-        </div>
-        <div class="mySlides">
-          <img src="images/samsung-grey2.jpg" alt="">
-        </div>
-        <div class="mySlides">
-          <img src="images/samsung-grey3.jpg" alt="">
+          <img src="images/samsung-black3.jpg" alt="Samsung S24 Ultra black">
         </div>
 
         <div class="mySlides">
-          <img src="images/samsung-violet1.jpg" alt="">
+          <img src="images/samsung-grey1.jpg" alt="Samsung S24 Ultra grey">
         </div>
         <div class="mySlides">
-          <img src="images/samsung-violet2.jpg" alt="">
+          <img src="images/samsung-grey2.jpg" alt="Samsung S24 Ultra grey">
         </div>
         <div class="mySlides">
-          <img src="images/samsung-violet3.jpg" alt="">
+          <img src="images/samsung-grey3.jpg" alt="Samsung S24 Ultra grey">
         </div>
 
         <div class="mySlides">
-          <img src="images/samsung-yellow2.jpg" alt="">
+          <img src="images/samsung-violet1.jpg" alt="Samsung S24 Ultra violet">
         </div>
         <div class="mySlides">
-          <img src="images/samsung-yellow1.jpg" alt="">
+          <img src="images/samsung-violet2.jpg" alt="Samsung S24 Ultra violet">
         </div>
         <div class="mySlides">
-          <img src="images/samsung-yellow3.jpg" alt="">
+          <img src="images/samsung-violet3.jpg" alt="Samsung S24 Ultra violet">
+        </div>
+
+        <div class="mySlides">
+          <img src="images/samsung-yellow2.jpg" alt="Samsung S24 Ultra yellow">
+        </div>
+        <div class="mySlides">
+          <img src="images/samsung-yellow1.jpg" alt="Samsung S24 Ultra yellow">
+        </div>
+        <div class="mySlides">
+          <img src="images/samsung-yellow3.jpg" alt="Samsung S24 Ultra yellow">
         </div>
 
 
@@ -190,8 +190,6 @@
         <h2>
           Smasung Galaxy S24 Ultra
         </h2>
-
-
 
         <div id="samsung-specifications">
           <span class="camera"><i class="fa fa-camera"></i> 200.0 mp</span>
@@ -237,21 +235,21 @@
         </p>
       </div>
 
-    </section>
+    </div>
 
 
     <section id="api">
-      <h1>Here you can search for different devices</h1>
+      <h2>Here you can search for different devices</h2>
       <p>Use the search bar below to find all the models made by a brand.</p>
     </section>
 
 
-    <section id="search-section">
+    <div id="search-section">
       <input type="text" id="search-query" placeholder="Enter smartphone model...">
       <button id="search-button">Search</button>
-    </section>
+    </div>
 
-    <section id="search-results"></section>
+    <div id="search-results"></div>
 
   </main>
   <script src="js/scripts.js"></script>
