--- a/entertainment.html
+++ b/entertainment.html
@@ -31,7 +31,7 @@
     </div>
     <div class="content">
 
-      <div id="apple-vision-pro">
+      <section id="apple-vision-pro">
         <section class="entertainment-subtitle">
           <h2>Apple vision pro</h2>
           <p>
@@ -80,9 +80,9 @@
           </p>
         </div>
 
-      </div>
+      </section>
 
-      <div id="AI">
+      <section id="AI">
         <section class="entertainment-subtitle">
           <h2>Artificial Intelligence (AI) and Machine Learning</h2>
         </section>
@@ -124,9 +124,9 @@
             use of AI and ML, which calls for open procedures, fair data representation, and ongoing supervision.
           </p>
         </div>
-      </div>
+      </section>
 
-      <div id="moonwalkers">
+      <section id="moonwalkers">
         <section class="entertainment-subtitle">
           <h2>Moonwalkers shoes</h2>
           <p>
@@ -177,7 +177,7 @@
           </p>
         </div>
 
-      </div>
+      </section>
 
     </div>
 
